# BGR-SHRIMP

./: .coverage  .coveragerc  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  ANALISIS_PRECIO_CFR.md  API_DOCUMENTATION.md  CAMBIOS_DDP.md  CORRECCION_FLUJO.md  COTIZACION_CONSOLIDADA.md  DEPLOY.md  Dockerfile  FEEDBACK_SISTEMA.md  GOOGLE_SHEETS_SETUP.md  MEJORAS_DETECCION_COMPLETA.md  MEJORAS_IMPLEMENTADAS.md  Makefile  NEXT_STEPS.md  QUALITY_ASSURANCE.md  README.MD  SETUP.md  TESTING_SETUP.md  compare_implementations.py  context.md  coverage.xml  critical_points_report.json  debug_glaseo.py  direct_import_test.py  mypy.ini  nixpacks.toml  pre_deploy_checklist_report.json  pyproject.toml  pytest.ini  quality_certificate.txt  railway.json  reload_test.py  render.yaml  requirements-dev.txt  (+33 more)
.github/workflows/: ci-cd.yml  ci.yml  keep-alive.yml
app/: __init__.py  config.py  dependencies.py  exceptions.py  logging_config.py  main.py  models.py  monitoring.py  routes.py  security.py
app/handlers/: __init__.py
app/routes/: __init__.py  admin_routes.py  pdf_routes.py  rag_routes.py  review_routes.py  test_routes.py  training_routes.py  whatsapp_content.txt  whatsapp_routes.py
app/services/: audio_handler.py  excel.py  excel_calculator.py  excel_local_calculator.py  google_sheets.py  google_sheets_backup.py  google_sheets_simple.py  human_review.py  interactive.py  interactive_backup.py  openai_service.py  pdf_generator.py  pricing.py  quality_assurance.py  rag_service.py  session.py  training_capture_db.py  training_pipeline.py  utils.py  utils_new.py  whatsapp_sender.py
app/templates/: review_dashboard.html
app/utils/: __init__.py  anonymizer.py  language_utils.py  message_utils.py  service_utils.py
data/: CALCULO_DE _PRECIOS-AGUAJE17.xlsx  directorio de clientes.xls  sample_precios_fob.xlsx  sessions.json
data/etl_queue/: 20251126_115806_773542_+5939680.json  20251126_120804_500189_+5939680.json  20251126_121305_365358_test_ass.json  20251126_121305_371477_test_ass.json  20251126_121357_305647_+5939680.json  20251126_121407_347565_+5939680.json  20251126_121443_482500_+5939680.json  20251126_121453_357069_+5939680.json  20251126_121742_287948_+5939680.json  20251126_122127_320879_test_ass.json  20251126_122127_327993_test_ass.json  20251126_122226_293775_+5939680.json  20251126_122228_891795_+5939680.json  20251126_122237_96328_+5939680.json  20251126_125832_825159_syntheti.json  20251126_125832_848957_syntheti.json  20251126_125833_150662_syntheti.json  20251126_125833_162491_syntheti.json  (+30 more)
data/finetune/: train.jsonl  (+1 more)
docs/: CONSENT_FLOW.md  TRAINING_SYSTEM.md
scripts/: PRE_DEPLOY_QUICK_REFERENCE.md  README_PRE_DEPLOY.md  README_VALIDATION.md  export_for_finetune.py  export_training_data.py  fix_consolidated_validation.py  fix_price_info_validation.py  generate_quality_certificate.py  generate_synthetic_conversations.py  init_rag.py  master_validation.py  pre_deploy_checklist.py  run_validation.py  upload_to_openai.py  validate_critical_points.py
tests/: README.md  conftest.py  test_pricing.py
(+39 files in other folders)
